@@ -33,6 +33,7 @@ Copyright_License {
 #include "NMEA/Checksum.hpp"
 #include "Operation/Operation.hpp"
 #include "Util/StringUtil.hpp"
+#include "Util/ConvertString.hpp"
 
 #include <tchar.h>
 #include <stdio.h>
@@ -218,7 +219,6 @@ bool
 EWDevice::AddWaypoint(const Waypoint &way_point, OperationEnvironment &env)
 {
   char EWRecord[100];
-  TCHAR IDString[12];
   int DegLat, DegLon;
   double tmp, MinLat, MinLon;
   char NoS, EoW;
@@ -228,11 +228,16 @@ EWDevice::AddWaypoint(const Waypoint &way_point, OperationEnvironment &env)
     return false;
 
   // copy at most 6 chars
-  CopyString(IDString, way_point.name.c_str(), 7);
+  const WideToUTF8Converter name_utf8(way_point.name.c_str());
+  if (!name_utf8.IsValid())
+    return false;
+
+  char IDString[12];
+  CopyString(IDString, name_utf8, 7);
 
   // fill up with spaces
-  while (_tcslen(IDString) < 6)
-    _tcscat(IDString, _T(" "));
+  while (strlen(IDString) < 6)
+    strcat(IDString, " ");
 
   // prepare lat
   tmp = (double)way_point.location.latitude.Degrees();
